--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <h1>tap the screen!</h1>
     <video class="videoPlayer" muted="" autoplay="" playsinline=""></video>
     <div class="filter"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
