--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>tap the screen!</h1>
+    <input type="file" name="image" accept="image/*" capture="environment">
     <video class="videoPlayer" muted="" autoplay="" playsinline=""></video>
     <div class="filter"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
