--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <h1>tap the screen!</h1>
     <video class="videoPlayer" muted="" autoplay="" playsinline=""></video>
     <div class="filter"></div>
+    <script>
+      var loc = window.location.href+'';
+        if (loc.indexOf('http://')==0){
+        window.location.href = loc.replace('http://','https://');
+      }
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="javascript.js"></script>
   </body>
