bug fixes possibly

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>tap the screen!</h1>
-    <video class="videoPlayer" muted="" autoplay="" playsinline=""></video>
+    <video autoplay class="videoPlayer"></video>
     <div class="filter"></div>
     <script>
       var loc = window.location.href+'';
