--- a/secondary.html
+++ b/secondary.html
@@ -6,8 +6,6 @@
   </head>
   <body>
     <h1>tap the screen!</h1>
-    <img src="">
-    <div class="filter"></div>
     <script>
       var loc = window.location.href+'';
         if (loc.indexOf('http://')==0){
@@ -15,6 +13,6 @@
       }
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="javascript.js"></script>
+    <script type="text/javascript" src="javascript2.js"></script>
   </body>
 </html>
