--- a/secondary.html
+++ b/secondary.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <title>relativ*</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
