adding logo, added header, fix content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>tap the screen!</h1>
+    <div class="header">
+      <div class ="logoholder">
+        <img class ="logo" src="relativ_logo-01.png">
+      </div>
+      <div class ="instructions">
+        <h1>tap the screen!</h1>
+      </div>
+    </div>
     <video class="videoPlayer" muted="" autoplay="" playsinline=""></video>
     <div class="filter"></div>
     <script>
