--- a/secondary.html
+++ b/secondary.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>tap the screen!</h1>
+    <div class="header">
+      <h1>tap the screen!</h1>
+    </div>
     <script>
       var loc = window.location.href+'';
         if (loc.indexOf('http://')==0){
