--- a/secondary.html
+++ b/secondary.html
@@ -7,7 +7,12 @@
   </head>
   <body>
     <div class="header">
-      <h1>tap the screen!</h1>
+      <div class ="logoholder">
+        <img class ="logo" src="relativ_logo-01.png">
+      </div>
+      <div class ="instructions">
+        <h1>tap the screen!</h1>
+      </div>
     </div>
     <script>
       var loc = window.location.href+'';
